# onboard-me

./: .gitignore  README.md  docker-compose.yml  package-lock.json  project-description.md  validate_composio.py
admin/: Dockerfile  index.html  nginx.conf  (+5 more)
backend/: .env.template  Dockerfile  main.py  pyproject.toml  settings.py  test_streaming.py
backend/routes/: agent.py  auth.py
backend/services/creator_agent/: graph.py
backend/services/creator_agent/nodes/: generate.py
backend/shared/: llm.py
backend/src/: composio_client.py  logging.conf  main.py  supabase_client.py
backend/src/domain/: model.py
backend/src/features/admin/: router.py  schema.py
backend/src/features/auth/: dependencies.py  router.py  schema.py  services.py
backend/src/features/composio/: router.py
backend/src/features/composio_integration/: router.py
backend/src/features/creator_agent/: router.py
backend/src/features/creator_agent/service/: graph.py  graph_generate_content.py  state.py
backend/src/features/creator_agent/service/nodes/: create_structure.py  generate.py  generate_lesson.py  generate_quiz.py  ingest_knowledge.py  prepare_submodules.py  save_quiz_to_supabase.py  save_to_supabase.py  tools.py
backend/src/features/cursor_admin/: router.py
backend/src/features/cursor_admin/services/: apply_changes.py  graph.py  state.py
backend/src/features/documents/: router.py  schema.py  service.py
backend/src/features/formations/: progression_service.py  router.py  schema.py
backend/src/features/quiz/: __init__.py  router.py
backend/src/shared/: deep_merge.py
(+132 files in other folders)
